Vesion 1.0.2 with slideshow play speed addition, security update, and wp_media striped out
git-svn-id: https://plugins.svn.wordpress.org/slides-js-plus/trunk@678783 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -67,6 +67,7 @@
     width: 32px;
     text-indent: 32px;
     overflow: hidden;
+    opacity: 0.5;
 }
 
 #slides .prev {
@@ -80,6 +81,7 @@
     width: 32px;
     text-indent: 32px;
     overflow: hidden;
+    opacity: 0.5;
 }
 
 #products .next {
@@ -93,6 +95,8 @@
     width: 32px;
     text-indent: 32px;
     overflow: hidden;
+    opacity: 0.5;
+
 }
 
 #products .prev {
@@ -105,7 +109,8 @@
     height: 32px;
     width: 32px;
     text-indent: 32px;
-    overflow: hidden;    
+    overflow: hidden; 
+    opacity: 0.5;
 }
 
 #slides ul.pagination {
