Updated image positioning
git-svn-id: https://plugins.svn.wordpress.org/slides-js-plus/trunk@693956 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -48,12 +48,15 @@
 
 .slides_container a img {
 	display:block;
+        margin: auto;
+        width: auto;
 }
 
 .slides_container a {
         width: 570px;
 	height:270px;
 	display:block;
+        text-align: center;
 }
 
 #slides .next {
